samples/_failures_safe/1761316280_da86ba_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_89148d81.c: In function ‘tokenize’:
./samples/SAFE/__tmp_89148d81.c:177:39: error: expected ‘;’ at end of input
  177 |         column = token.column + strlen
      |                                       ^
      |                                       ;
./samples/SAFE/__tmp_89148d81.c:177:9: error: expected declaration or statement at end of input
  177 |         column = token.column + strlen
      |         ^~~~~~
./samples/SAFE/__tmp_89148d81.c:177:9: error: expected declaration or statement at end of input
